--- a/Tema_01/Teoria/Index_01_02.html
+++ b/Tema_01/Teoria/Index_01_02.html
@@ -264,12 +264,11 @@
     </header>
 
     <nav>
-      <h2>Tema 1</h2>
+      <h2>Teoria Tema 1</h2>
     </nav>
 
     <div class="content-container">
-      <a href="Ejercicios/Index_01_01.html" target="_blank" class="recuadro">Ejercicios</a>
-      <a href="Teoria/Index_01_02.html" target="_blank" class="recuadro">Teoria</a>
+      <a href="Temario_01.pdf" target="_blank" class="recuadro">Temario_01</a>
     </div>
 
     <footer>
