--- a/Index_00.html
+++ b/Index_00.html
@@ -1,155 +1,244 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marcos Morales Doello - DWECL</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marcos Morales Doello · DWECL</title>
 
-  <!-- Fuente moderna -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Fuente profesional -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* RESET */
-    * {
+    /* ===== RESET Y VARIABLES ===== */
+    *, *::before, *::after {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
+    :root {
+      --accent: #2563eb;
+      --accent-hover: #1d4ed8;
+      --bg-light: #f9fafb;
+      --bg-dark: #0f172a;
+      --text-light: #1e293b;
+      --text-dark: #e2e8f0;
+      --card-light: #ffffff;
+      --card-dark: #1e293b;
+      --border-light: #e2e8f0;
+      --border-dark: #334155;
+      --transition: 0.3s ease;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: var(--bg-dark);
+        color: var(--text-dark);
+      }
+      .main-container {
+        background-color: var(--card-dark);
+        border: 1px solid var(--border-dark);
+      }
+      .recuadro {
+        background-color: #27334b;
+        border: 1px solid #384760;
+      }
+      .recuadro:hover {
+        background-color: #32425c;
+      }
+      header h1, footer b {
+        color: var(--accent);
+      }
+      .tooltip {
+        background-color: #1e293b;
+        border-color: #3b82f6;
+      }
+    }
+
+    /* ===== ESTILO GLOBAL ===== */
     body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
-      background-size: 400% 400%;
-      animation: gradientMove 10s ease infinite;
-      color: #333;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--bg-light);
+      color: var(--text-light);
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      padding: 20px;
+      padding: 40px 20px;
+      transition: background-color var(--transition), color var(--transition);
     }
 
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* CONTENEDOR PRINCIPAL */
+    /* ===== CONTENEDOR PRINCIPAL ===== */
     .main-container {
-      background: #fff;
-      color: #333;
+      background-color: var(--card-light);
+      border: 1px solid var(--border-light);
       border-radius: 20px;
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.25);
       max-width: 900px;
       width: 100%;
-      padding: 40px 50px;
-      text-align: center;
-      transition: all 0.3s ease;
+      padding: 50px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.06);
+      transition: var(--transition);
+      animation: fadeIn 0.7s ease forwards;
     }
 
-    .main-container:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
-    /* CABECERA */
-    header h1 {
-      font-size: 2.6rem;
-      color: #1a2a6c;
+    /* ===== CABECERA ===== */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      flex-wrap: wrap;
+      gap: 20px;
+      position: relative;
+    }
+
+    .logo span {
+      font-size: 1.8rem;
       font-weight: 700;
-      letter-spacing: 1px;
-      margin-bottom: 10px;
+      color: var(--accent);
+      letter-spacing: -0.5px;
     }
 
+    .social {
+      display: flex;
+      gap: 16px;
+      position: relative;
+    }
+
+    .social button, .social a {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.3rem;
+      opacity: 0.7;
+      color: var(--text-light);
+      transition: opacity var(--transition), transform var(--transition), color var(--transition);
+    }
+
+    .social a:hover, .social button:hover {
+      opacity: 1;
+      transform: translateY(-2px);
+      color: var(--accent);
+    }
+
+    /* ===== TOOLTIP EMAIL ===== */
+    .tooltip {
+      position: absolute;
+      top: 35px;
+      right: 0;
+      background-color: #fff;
+      border: 1px solid var(--accent);
+      border-radius: 10px;
+      padding: 12px 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      font-size: 0.9rem;
+      display: none;
+      align-items: center;
+      gap: 10px;
+      z-index: 10;
+    }
+
+    .tooltip button {
+      background-color: var(--accent);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      padding: 6px 10px;
+      font-size: 0.8rem;
+      cursor: pointer;
+      transition: background var(--transition);
+    }
+
+    .tooltip button:hover {
+      background-color: var(--accent-hover);
+    }
+
+    /* ===== SUBTÍTULO ===== */
     nav h2 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       font-weight: 500;
-      color: #555;
-      margin-bottom: 30px;
+      color: #64748b;
+      margin-bottom: 35px;
+      text-align: center;
     }
 
-    /* TARJETAS */
+    /* ===== TARJETAS ===== */
     .content-container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 25px;
+      justify-items: center;
     }
 
     .recuadro {
-      background: linear-gradient(145deg, #f9f9f9, #e9eef5);
-      border-radius: 15px;
-      padding: 25px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .recuadro::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #f8fafc;
+      border: 1px solid #e2e8f0;
+      border-radius: 14px;
+      padding: 40px 22px;
+      transition: var(--transition);
+      text-align: center;
       width: 100%;
-      height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0.3), rgba(255,255,255,0));
-      transition: 0.5s;
-    }
-
-    .recuadro:hover::before {
-      left: 100%;
+      max-width: 320px;
+      text-decoration: none;
+      color: inherit;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 1.25rem;
+      color: var(--accent);
     }
 
     .recuadro:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+      transform: translateY(-5px);
+      box-shadow: 0 10px 18px rgba(0, 0, 0, 0.06);
+      background-color: #eef3ff;
     }
 
-    .recuadro h3 {
-      margin-bottom: 10px;
-      font-size: 1.4rem;
-      color: #1a2a6c;
-    }
-
-    .recuadro a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: 600;
-      background: linear-gradient(90deg, #1a2a6c, #b21f1f);
-      padding: 12px 18px;
-      border-radius: 8px;
-      display: inline-block;
-      margin-top: 8px;
-      transition: background 0.4s ease;
-    }
-
-    .recuadro a:hover {
-      background: linear-gradient(90deg, #fdbb2d, #b21f1f);
-    }
-
+    /* ===== FOOTER ===== */
     footer {
-      margin-top: 40px;
-      color: #777;
-      font-size: 0.95rem;
+      margin-top: 50px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #64748b;
     }
 
     footer b {
-      color: #1a2a6c;
+      color: var(--accent);
     }
 
-    /* RESPONSIVE */
+    /* ===== RESPONSIVE ===== */
+    @media (max-width: 700px) {
+      .content-container {
+        grid-template-columns: 1fr;
+      }
+    }
+
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-
-      nav h2 {
-        font-size: 1.2rem;
-      }
-
       .main-container {
-        padding: 30px 25px;
+        padding: 30px 22px;
+      }
+
+      header {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .logo span {
+        font-size: 1.6rem;
+      }
+
+      .tooltip {
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
       }
     }
   </style>
@@ -158,33 +247,62 @@
 <body>
   <div class="main-container">
     <header>
-      <h1>Marcos Morales Doello</h1>
+      <div class="logo">
+        <span>Marcos Morales Doello</span>
+      </div>
+      <div class="social">
+        <a href="https://github.com/mmordoe685/DWECL.git" target="_blank" title="GitHub">🐙</a>
+        <a href="https://www.linkedin.com/in/marcos-morales-doello-077b6a331/" target="_blank" title="LinkedIn">💼</a>
+        <button id="emailBtn" title="Correo electrónico">✉️</button>
+
+        <!-- Tooltip de correo -->
+        <div class="tooltip" id="tooltip">
+          <span id="emailText">mmordoe685@g.educaand.es</span>
+          <button id="copyBtn">Copiar</button>
+        </div>
+      </div>
     </header>
 
     <nav>
-      <h2>Lenguaje de Marcas — 1º DAW</h2>
+      <h2>DWECL · 2º DAW</h2>
     </nav>
 
     <div class="content-container">
-      <div class="recuadro">
-        <h3>Tema 1</h3>
-        <a href="Tema_01/Index_01.html" target="_blank">Abrir Tema 1</a>
-      </div>
-
-      <div class="recuadro">
-        <h3>Tema 2</h3>
-        <a href="Tema_02/Index_02.html" target="_blank">Abrir Tema 2</a>
-      </div>
-
-      <div class="recuadro">
-        <h3>Tema 3</h3>
-        <a href="Tema_03/Index_03.html" target="_blank">Abrir Tema 3</a>
-      </div>
+      <a href="Tema_01/Index_01.html" target="_blank" class="recuadro">Tema 1</a>
+      <a href="Tema_02/Index_02.html" target="_blank" class="recuadro">Tema 2</a>
+      <a href="Tema_03/Index_03.html" target="_blank" class="recuadro">Tema 3</a>
+      <a href="Tema_04/Index_04.html" target="_blank" class="recuadro">Tema 4</a>
     </div>
 
     <footer>
-      <p><b>mmordoe685@g.educaand.es</b> • Actualizado: <b>06/11/2025</b></p>
+      <p>Actualizado <b>11/11/2025</b></p>
     </footer>
   </div>
+
+  <script>
+    // Mostrar/Ocultar tooltip del correo
+    const emailBtn = document.getElementById('emailBtn');
+    const tooltip = document.getElementById('tooltip');
+    const copyBtn = document.getElementById('copyBtn');
+    const emailText = document.getElementById('emailText');
+
+    emailBtn.addEventListener('click', () => {
+      tooltip.style.display = tooltip.style.display === 'flex' ? 'none' : 'flex';
+    });
+
+    // Cerrar tooltip al hacer clic fuera
+    document.addEventListener('click', (e) => {
+      if (!tooltip.contains(e.target) && e.target !== emailBtn) {
+        tooltip.style.display = 'none';
+      }
+    });
+
+    // Copiar correo al portapapeles
+    copyBtn.addEventListener('click', () => {
+      navigator.clipboard.writeText(emailText.textContent);
+      copyBtn.textContent = "Copiado ✔";
+      setTimeout(() => copyBtn.textContent = "Copiar", 1500);
+    });
+  </script>
 </body>
 </html>
